@startuml Class Diagram
!theme plain
skinparam classAttributeIconSize 0

title My Nottingham - Core Class Diagram

package "Models" {
    class User {
        +id: String
        +username: String
        +fullName: String
        +email: String
        +role: String
        +profileImageUrl: String?
        +studentId: String?
        +employeeId: String?
        +faculty: String?
        +department: String?
    }

    class Conversation {
        +id: String
        +participantId: String
        +participantName: String
        +participantAvatar: String?
        +lastMessage: String
        +lastMessageTime: Long
        +unreadCount: Int
        +isGroup: Boolean
        +isPinned: Boolean
        +isOnline: Boolean
    }

    class ChatMessage {
        +id: String
        +senderId: String
        +senderName: String
        +message: String
        +timestamp: Long
        +isRead: Boolean
        +messageType: String
    }

    class ForumPost {
        +id: String
        +authorId: String
        +authorName: String
        +title: String
        +content: String
        +category: String
        +likes: Int
        +views: Int
        +commentCount: Int
        +isPinned: Boolean
        +timestamp: Long
    }

    class ForumComment {
        +id: String
        +postId: String
        +authorId: String
        +authorName: String
        +content: String
        +likes: Int
        +isPinned: Boolean
        +pinnedAt: Long?
        +createdAt: Long
    }

    class Errand {
        +id: String
        +requesterId: String
        +requesterName: String
        +title: String
        +description: String
        +type: ErrandType
        +reward: Double
        +status: ErrandStatus
        +createdAt: Long
    }

    class ShuttleRoute {
        +routeId: String
        +routeName: String
        +description: String
        +specialNote: String?
        +vehicleType: String
        +schedules: Map<DayType, Schedule>
    }

    class Booking {
        +id: String
        +userId: String
        +facilityType: String
        +facilityName: String
        +bookingDate: String
        +startTime: String
        +endTime: String
        +status: BookingStatus
        +createdAt: Long
    }

    class Course {
        +id: String
        +courseName: String
        +courseCode: String
        +semester: String
        +attendedClasses: Int
        +totalClasses: Int
        +dayOfWeek: DayOfWeek
        +courseType: CourseType
        +signInStatus: SignInStatus
    }

    class AttendanceRecord {
        +id: String
        +courseId: String
        +date: Date
        +status: AttendanceStatus
        +markedAt: Date?
    }

    enum BookingStatus {
        CONFIRMED
        CANCELLED
        COMPLETED
    }

    enum ErrandType {
        SHOPPING
        PICKUP
        FOOD_DELIVERY
        OTHER
    }

    enum ErrandStatus {
        PENDING
        ACCEPTED
        DELIVERING
        COMPLETED
        CANCELLED
    }

    enum AttendanceStatus {
        PRESENT
        ABSENT
        LATE
        EXCUSED
    }

    enum SignInStatus {
        LOCKED
        UNLOCKED
        SIGNED
        CLOSED
    }
}

package "Repositories" {
    interface IMessageRepository {
        +getConversationsFlow(userId: String): Flow<List<Conversation>>
        +getMessagesFlow(conversationId: String): Flow<List<ChatMessage>>
        +sendMessage(conversationId: String, message: ChatMessage): Result<Boolean>
    }

    class FirebaseMessageRepository implements IMessageRepository {
        -database: FirebaseDatabase
        -conversationsRef: DatabaseReference
        -userConversationsRef: DatabaseReference
    }

    class FirebaseUserRepository {
        -database: FirebaseDatabase
        -auth: FirebaseAuth
        +login(email: String, password: String): Result<User>
        +register(user: User): Result<Boolean>
        +getUserProfile(uid: String): Flow<User>
    }

    class FirebaseForumRepository {
        -database: FirebaseDatabase
        +getPosts(): Flow<List<ForumPost>>
        +createPost(post: ForumPost): Result<String>
        +likePost(postId: String): Result<Boolean>
        +deleteComment(postId: String, commentId: String): Result<Unit>
        +togglePinComment(postId: String, commentId: String): Result<Boolean>
    }

    class InstattRepository {
        -database: FirebaseDatabase
        +getSessionStatus(scheduleId: String): Flow<SessionStatus>
        +markAttendance(sessionId: String, studentId: String): Result<Boolean>
        +unlockSession(scheduleId: String): Result<Boolean>
    }
}

package "ViewModels" {
    abstract class BaseViewModel {
        #_loading: MutableLiveData<Boolean>
        +loading: LiveData<Boolean>
        #_error: MutableLiveData<String?>
        +error: LiveData<String?>
    }

    class ChatDetailViewModel extends BaseViewModel {
        -repository: FirebaseMessageRepository
        +messages: LiveData<List<ChatMessage>>
        +sendMessage(text: String)
    }

    class ForumViewModel extends BaseViewModel {
        -repository: FirebaseForumRepository
        +posts: LiveData<List<ForumPost>>
        +createPost(title: String, content: String)
    }

    class ShuttleViewModel {
        +routes: LiveData<List<ShuttleRoute>>
        +selectedDayType: LiveData<DayType>
        +setDayType(dayType: DayType)
        +getScheduleForRoute(routeId: String): Schedule?
    }
}

ChatDetailViewModel --> FirebaseMessageRepository : uses
ForumViewModel --> FirebaseForumRepository : uses
FirebaseMessageRepository --> Conversation : manages
FirebaseMessageRepository --> ChatMessage : manages
FirebaseUserRepository --> User : manages
FirebaseForumRepository --> ForumPost : manages
FirebaseForumRepository --> ForumComment : manages
ForumComment --> ForumPost : belongs to

Booking --> BookingStatus : has
Errand --> ErrandType : has
Errand --> ErrandStatus : has
Course --> SignInStatus : has
AttendanceRecord --> AttendanceStatus : has
AttendanceRecord --> Course : belongs to

@enduml
